# thread_pool

./: .clang-format  CMakeLists.txt  LICENSE  README.md  thread_pool.cpp  thread_pool.hpp
cmake/: ThreadPoolOnMutexesConfig.cmake.in
include/thread_pool/: thread_pool.hpp
include/thread_pool_on_mutexes/: thread_pool_on_mutexes.hpp
src/: thread_pool.cpp  thread_pool_on_mutexes.cpp
tests/: CMakeLists.txt  trivial_test.cpp
